<resources>
    <string name="app_name">CanteenCheckerAdminApp</string>
    <string name="hint_user_name">Username</string>
    <string name="hint_password">Password</string>
    <string name="text_log_in">Login</string>
    <string name="message_login_failed">Login not successful - please try again</string>
    <string name="message_canteen_not_found">Canteen not found</string>
    <string name="hint_filter">Filter</string>
    <string name="text_search">Search</string>
    <string name="message_loading_reviews_failed">Loading Reviews failed</string>
    <string name="message_delete_review_failed">Review could not be deleted</string>
    <string name="message_delete_review_success">Review has been deleted</string>
    <string name="message_update_canteen_failure">Canteen update failed</string>
    <string name="message_update_canteen_success">Canteen successfully updated</string>
    <string name="dish_label">Dish Name</string>
    <string name="dish_price_label">Price of Dish</string>
    <string name="dialog_update_dish_title">Update Dish</string>
    <string name="dialog_update_dish_positive_button">Update Dish</string>
    <string name="dish_update_failure">Dish could not be updated</string>
    <string name="dish_update_success">Dish successfully updated</string>
    <string name="waitingtime_text">Current Waiting Time</string>
    <string name="dialog_update_waiting_time_title">Update Waiting Time</string>
    <string name="waitingtime_update_failed">Waiting Time could not be updated</string>
    <string name="waitingtime_update_sucess">Waiting Time successfully updated</string>
    <string name="dialog_update_waitingtime_positive_button">Update Waiting Time</string>
    <string name="text_ratings_and_reviews">Ratings and Reviews</string>
    <string name="text_five">5</string>
    <string name="text_four">4</string>
    <string name="text_three">3</string>
    <string name="text_two">2</string>
    <string name="text_one">1</string>
    <string name="logout">Logout</string>
    <string name="reviews">Reviews</string>
    <string name="details">Update Details</string>
    <string name="overview">Overview</string>
    <string name="update_dish_details">Update Dish Details</string>
    <string name="update_waiting_time">Update Waiting Time</string>
    <string name="canteen_name">Canteen Name</string>
    <string name="canteen_address">Canteen Address</string>
    <string name="canteen_website">Canteen Website</string>
    <string name="canteen_phone">Canteen Phone</string>
    <string name="canteen_waiting_time">Canteen WaitingTime</string>
    <string name="canteen_dish">Canteen Dish</string>
    <string name="dish_price">Dish Price</string>
    <string name="update_canteen_details">Update Canteen Details</string>
</resources>