<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/mniLogout"
        android:title="@string/logout"
        android:visible="false"
        app:showAsAction="never"
        />
    <!--app:showAsAction="ifRoom" -->
    <item android:id="@+id/mniOverview"
        android:title="@string/overview"
        android:visible="false"
        app:showAsAction="never"
        />
    <item android:id="@+id/mniDetails"
        android:title="@string/details"
        android:visible="false"
        app:showAsAction="never"
        />
    <item android:id="@+id/mniReviews"
        android:title="@string/reviews"
        android:visible="false"
        app:showAsAction="never"
        />
</menu>